--- a/MySportsAreaView/app/src/main/res/values/strings.xml
+++ b/MySportsAreaView/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">MySportsAreaView</string>
+    <string name="app_name">MySportsArea</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">A propos</string>
+    <string name="title_activity_direction">Map</string>
 </resources>
